<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"   xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity"
    >

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map"
        android:id="@+id/mapButton"
        android:layout_gravity="center_horizontal"
        android:onClick="gotoMap"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pubs_button"
        android:layout_gravity="center_horizontal"
        android:text="@string/show_pubs">
    </Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_beer_test_button"
        android:layout_gravity="center_horizontal"
        android:text="@string/add_beer">
    </Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_pub_test_button"
        android:layout_gravity="center_horizontal"
        android:text="@string/add_pub">
    </Button>
</LinearLayout>